--- a/Alarm/.settings/org.eclipse.jdt.core.prefs
+++ b/Alarm/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,5 @@
-#Thu Dec 23 08:32:08 BRT 2010
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.5
